// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationFullscreen > styles > should render with an svg component as the image 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  max-width: 420px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-1 {
  height: 160px;
  max-width: 280px;
  object-fit: contain;
}

.circuit-2 {
  height: 100%;
  width: 100%;
}

.circuit-3 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 1.5rem;
  line-height: 1.75rem;
  margin-top: 24px;
  margin-bottom: 8px;
  text-align: center;
}

.circuit-4 {
  margin-top: 24px;
}

.circuit-5 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

<div>
  <div
    class="circuit-0"
  >
    <div
      class="circuit-1"
    >
      <svg
        aria-hidden="true"
        class="circuit-2"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12c0 .5-.4 1-1 1h-8v8c0 .5-.4 1-1 1s-1-.5-1-1v-8H3c-.5 0-1-.5-1-1s.5-1 1-1h8V3c0-.5.4-1 1-1s1 .5 1 1v8h8c.6 0 1 .5 1 1z"
          fill="currentColor"
        />
      </svg>
    </div>
    <h2
      class="circuit-3"
    >
      The browser you're using is no longer supported
    </h2>
    <div
      class="_base_fd5359 _center_fd5359 circuit-4"
    >
      <button
        class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426"
      >
        <span
          class="_spinner_892426 circuit-5"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          Update now
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationFullscreen > styles > should render with body text 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  max-width: 420px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-1 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  height: 160px;
  max-width: 280px;
  object-fit: contain;
}

.circuit-2 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 1.5rem;
  line-height: 1.75rem;
  margin-top: 24px;
  margin-bottom: 8px;
  text-align: center;
}

.circuit-3 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  text-align: center;
}

.circuit-4 {
  margin-top: 24px;
}

.circuit-5 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

<div>
  <div
    class="circuit-0"
  >
    <img
      alt=""
      class="circuit-1"
      src="/images/illustration-update-browser.svg"
    />
    <h2
      class="circuit-2"
    >
      The browser you're using is no longer supported
    </h2>
    <p
      class="circuit-3"
    >
      You need a more up-to-date browser to continue using SumUp.
    </p>
    <div
      class="_base_fd5359 _center_fd5359 circuit-4"
    >
      <button
        class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426"
      >
        <span
          class="_spinner_892426 circuit-5"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          Update now
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`NotificationFullscreen > styles > should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  max-width: 420px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.circuit-1 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  height: 160px;
  max-width: 280px;
  object-fit: contain;
}

.circuit-2 {
  font-weight: 700;
  color: var(--cui-fg-normal);
  letter-spacing: -0.03em;
  font-size: 1.5rem;
  line-height: 1.75rem;
  margin-top: 24px;
  margin-bottom: 8px;
  text-align: center;
}

.circuit-3 {
  margin-top: 24px;
}

.circuit-4 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

<div>
  <div
    class="circuit-0"
  >
    <img
      alt=""
      class="circuit-1"
      src="/images/illustration-update-browser.svg"
    />
    <h2
      class="circuit-2"
    >
      The browser you're using is no longer supported
    </h2>
    <div
      class="_base_fd5359 _center_fd5359 circuit-3"
    >
      <button
        class="_base_892426 _focus-visible_73b4bb _giga_892426 _primary_892426"
      >
        <span
          class="_spinner_892426 circuit-4"
        >
          <span
            class="_hide-visually_73b4bb"
          />
        </span>
        <span
          class="_content_892426"
        >
          Update now
        </span>
      </button>
    </div>
  </div>
</div>
`;
